--- a/plugins/fiddy/site/models/image/columns.yaml
+++ b/plugins/fiddy/site/models/image/columns.yaml
@@ -14,6 +14,7 @@ columns:
     searchable: true
   href:
     label: Media Selection
+    mode: image
   alt:
     label: Alt Tag
     searchable: true
